# silence-interrupter

./: .gitattributes  .gitignore  Cargo.toml  README.md  justfile  prek.toml  release.toml
.github/workflows/: ci.yaml  release.yaml
media/: illustrative-image.typ  justfile
scripts/: fetch-cave-sounds.py  fetch-sounds.py
src/: app.rs  audio.rs  cli.rs  main.rs
