[package]
name = "silence-interrupter"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
simple-eyre = "0.3"
rodio = { version = "0.22", default-features = false, features = ["playback", "vorbis"] }
fastrand = "2"
rust-embed = "8"

[profile.release]
opt-level = 3
debug = false
panic = "unwind"
lto = true
codegen-units = 1
strip = true
