[package]
name = "silence-interrupter"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
fastrand = "2"
humantime = "2"
rodio = { version = "0.22", default-features = false, features = ["playback", "vorbis"] }
rust-embed = "8"
simple-eyre = "0.3"

[profile.release]
opt-level = 3
debug = false
panic = "unwind"
lto = true
codegen-units = 1
strip = true
