[package]
name = "silence-interrupter"
description = "Play brainrot sounds at random time intervals, keeping you on edge."
categories = ["command-line-utilities", "multimedia::audio"]
repository = "https://github.com/sermuns/silence-interrupter"
version = "0.1.1"
edition = "2024"
license = "GLWTPL"

[dependencies]
clap = { version = "4", features = ["derive"] }
fastrand = "2"
humantime = "2"
rodio = { version = "0.22", default-features = false, features = ["playback", "vorbis"] }
rust-embed = "8"
simple-eyre = "0.3"

[profile.release]
opt-level = 3
debug = false
panic = "unwind"
lto = true
codegen-units = 1
strip = true
